<resources>
    <string name="app_name">Lab 6</string>
    <string name="hello_message">Hello World!</string>
    <string name="lab2_top_message">Lab 2 GUI</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Lab2_Button_Text">CLICK HERE</string>
    <string name="Lab2_Checkbox_Text">Check this out</string>
    <string name="Lab2_Switch_Text">Switch on / off</string>
    <string name="Lab2_Switch_Text_Toggle">The switch is now</string>
    <string name="Lab2_Switch_On_Text">on</string>
    <string name="Lab2_Switch_Off_Text">off</string>
    <string name="Lab2_Edittext_Hint">Enter Name Here</string>
    <string name="Lab2_Toast_Message">Here is more information</string>
    <string name="lab3_email_message">Enter your email address:</string>
    <string name="lab3_email_hint">Type email here</string>
    <string name="lab3_password_message">Type your password:</string>
    <string name="lab3_login_button_message">Login</string>
    <string name="lab3_profile_message">Your profile</string>
    <string name="lab3_profile_name_message">Your name:</string>
    <string name="lab3_profile_name_hint">Enter your name</string>
    <string name="lab3_profile_email_message">Your email:</string>
    <string name="lab3_profile_email_hint">Enter your email</string>
    <string name="lab3_profile_picture_message">Your picture:</string>
    <string name="lab3_profile_picture_instruction">Click the button above to take a picture</string>
    <string name="lab4_chat_button_text">Go to chat</string>
    <string name="lab4_chat_send">Send</string>
    <string name="lab4_chat_receive">Receive</string>
    <string name="lab4_chat_hint">Type here</string>
    <string name="lab4_delete">Do you want to delete this:%nrow: %d , database id: %d ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lab6_weather_button_text">Go to the weather forecast</string>
    <string name="lab6_current_location_text">Weather report for</string>
    <string name="lab6_current_temp_text">Current Temp</string>
    <string name="lab6_min_temp_text">Min Temp</string>
    <string name="lab6_max_temp_text">Max Temp</string>
    <string name="lab6_uv_rating_text">UV Rating</string>
    <string name="lab7_message_detail_header">Message Here</string>
    <string name="lab7_ID">ID=</string>
    <string name="lab7_is_a_send_message">Is a Send Message?</string>
    <string name="lab7_hide_button_text">Hide</string>

</resources>