<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab3_email_message" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/lab3_email_hint"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/lab3_password_message"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab3_login_button_message"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"/>

</LinearLayout>