<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    >


    <ListView
        android:id="@+id/lab4listview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:divider="#000"
        android:dividerHeight="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/lab4_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab4_chat_send"
        app:layout_constraintBaseline_toBaselineOf="@+id/lab4_message_input"
        app:layout_constraintEnd_toStartOf="@+id/lab4_message_input"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lab4_message_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/lab4_chat_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lab4_receive_button"
        app:layout_constraintStart_toEndOf="@+id/lab4_send_button" />

    <Button
        android:id="@+id/lab4_receive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab4_chat_receive"
        app:layout_constraintBaseline_toBaselineOf="@+id/lab4_message_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lab4_message_input" />

</androidx.constraintlayout.widget.ConstraintLayout>


